--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 "discord.py" = "^1.7.2"
+py3-pinterest = "^1.2.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
