--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,9 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-"discord.py" = "^1.7.2"
+"discord.py" = {extras = ["voice"], version = "^1.7.2"}
 py3-pinterest = "^1.2.2"
+youtube_dl = "^2021.5.16"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
